# DDDRCaloTubes

./: .gitignore  CMakeLists.txt  README.md
DRCaloTubesSDAction/: DRCaloTubesSDAction.cpp
DRCaloTubesSensitive/: CMakeLists.txt
DRCaloTubesSensitive/include/: DRCaloTubesEventAction.h  DRCaloTubesRunAction.h
DRCaloTubesSensitive/src/: DRCaloTubesEventAction.cpp  DRCaloTubesRunAction.cpp  DRCaloTubesSDAction.cpp  DRCaloTubesSteppingAction.cpp
DRdetector/: CMakeLists.txt
DRdetector/DRcalo/: CMakeLists.txt
DRdetector/DRcalo/compact/: DDDRCaloTubes.xml  dumpSteering.py  steering.py  vis.mac
DRdetector/DRcalo/include/: DRconstructor.h
DRdetector/DRcalo/src/: DDDRCaloTubes.cpp  DRconstructor.cpp
DRdetector/DRsegmentation/include/: DRCaloTubeGrid.h  DRCaloTubesGrid.h  DRCaloTubesHit.h
DRdetector/DRsegmentation/src/: DRCaloTubeGrid.cpp  DRCaloTubesGrid.cpp  SegmentationFactories.cpp
DRdetector/DRsensitive/: CMakeLists.txt
DRdetector/DRsensitive/include/: DRCaloTubesEventAction.h  DRCaloTubesGeneratorAction.h  DRCaloTubesHit.h  DRCaloTubesRunAction.h  DRCaloTubesSteppingAction.h
DRdetector/DRsensitive/src/: DRCaloTubesEventAction.cpp  DRCaloTubesGeneratorAction.cpp  DRCaloTubesRunAction.cpp  DRCaloTubesSDAction.cpp  DRCaloTubesSteppingAction.cpp
DRutils/: CMakeLists.txt  DRutils.cpp  DRutils.h
compact/: DDDRCaloTubes.xml  DRCaloTubes.xml  overlap.mac  steering.py
examples/DRCaloTubes/eve/: DDEve.xml
scripts/: steeringfile_creator.py
src/: DDDRCaloTubes.cpp  DRCaloTubeGrid.cpp  DRCaloTubeSDAction.cpp  DRCaloTubes.cpp  DRCaloTubesHit.h  SegmentationFactories.cpp
